--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "react-native-scripts": "0.0.40",
     "jest-expo": "~18.0.0",
+    "react-native-scripts": "0.0.40",
     "react-test-renderer": "16.0.0-alpha.12"
   },
   "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
@@ -19,8 +19,16 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "axios": "^0.16.2",
+    "base-64": "^0.1.0",
     "expo": "^18.0.3",
+    "graphql-tag": "^2.4.2",
     "react": "16.0.0-alpha.12",
-    "react-native": "^0.45.1"
+    "react-apollo": "^1.4.2",
+    "react-native": "^0.45.1",
+    "react-redux": "^5.0.5",
+    "react-router-native": "^4.1.1",
+    "redux": "^3.7.1",
+    "redux-saga": "^0.15.4"
   }
 }
