--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "base-64": "^0.1.0",
     "expo": "^18.0.3",
     "graphql-tag": "^2.4.2",
+    "npm": "^4.6.1",
     "react": "16.0.0-alpha.12",
     "react-apollo": "^1.4.2",
     "react-native": "^0.45.1",
