--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-redux": "^5.0.5",
     "react-router-native": "^4.1.1",
     "redux": "^3.7.1",
+    "redux-persist": "^4.8.2",
     "redux-saga": "^0.15.4"
   }
 }
